sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: ';' expected but identifier found.
    while (getValue(i-j)>temp)&&(j>1)
                              ^AlgInsertionSort:21: error: Unmatched closing brace '}' ignored here
}
^