sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var temp=0
  var j=0
	for (i<-1 to getValueCount()-1) {
    temp= getValue(i)
    j=i
    
      do {
        copy(i-j-1,i-j)
        j=j+1
        }
    while (getValue(i-j)>temp)&&(j>1)
     copy(j,i)
    }
  }

}